--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ var xmlhttp = new XMLHttpRequest();
 xmlhttp.onreadystatechange = function() {
   if (this.readyState == 4 && this.status == 200) {
     var myObj = JSON.parse(this.responseText);
-    document.getElementById("demo").innerHTML = myObj.name;
+    document.getElementById("demo").innerHTML = myObj.Freecompany.Name;
   }
 };
-xmlhttp.open("GET", "json_demo.txt", true);
+xmlhttp.open("GET", "https://xivapi.com/freecompany/9229283011365753108?data=FCM&extended=1", true);
 xmlhttp.send();
 </script>
 
