--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ fetch('https://xivapi.com/freecompany/9229283011365753108?data=FCM&extended=1')
     return response.json()
   })
   .then(data => {
-    // Work with JSON data here
+    var myObj = JSON.parse(data);
+    document.getElementById("demo").innerHTML = myObj.Freecompany.Name;
     console.log(data)
   })
   .catch(err => {
