--- a/dsroster.html
+++ b/dsroster.html
@@ -34,8 +34,8 @@ function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
 }
 
-async function getFc() {
-fetch('https://xivapi.com/freecompany/9229283011365753108?data=FCM&extended=1')
+async function getFc(fcid) {
+fetch('https://xivapi.com/freecompany/' + fcid + '?data=FCM&extended=1')
 	.then(response => {
 		return response.json()
 	})
@@ -100,7 +100,7 @@ for (index = 0, len = a.length; index < len; ++index) {
 
 }
 
-getFc()
+getFc(9229283011365753108)
 
 
 </script>
