--- a/dsroster.html
+++ b/dsroster.html
@@ -34,7 +34,7 @@ function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
 }
 
-async function getFc(fcid) {
+async function getFc() {
 fetch("https://xivapi.com/freecompany/9229283011365753108?data=FCM&extended=1")
 	.then(response => {
 		return response.json()
