--- a/dsroster.html
+++ b/dsroster.html
@@ -12,6 +12,15 @@ padding: 0;
 line-height : 0px;
 }
 
+@font-face {
+    font-family: 'eorzearegular';
+    src: url('eorzeaextended-webfont.woff2') format('woff2'),
+         url('eorzeaextended-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .chardiv{
         float: left;
 	position: relative;
@@ -22,6 +31,7 @@ line-height : 0px;
 	position:absolute;
 	top: 10px;
 	left: 5px;
+	font-family: 'eorzearegular';
 }
 
 .static {
