--- a/dsroster.html
+++ b/dsroster.html
@@ -94,6 +94,7 @@ var staticgrp = [20474470, 20474652, 20542583, 23765972, 24368520, 24368612, 218
 
 $(document).ready(function(){
   $("#alltoggle").click(function(){
+//Use switch class instead?
     $(".chardiv").toggle();
 
   });
