--- a/dsroster.html
+++ b/dsroster.html
@@ -14,6 +14,9 @@
             <button class="checktoggle" id="tnames">Toggle Names</button>
             <button class="checktoggle" id="tstatic">Toggle Static</button>
             <button class="checktoggle" id="trest">Toggle Non-Static</button>
+            <button class="checktoggle" id="hihealers">Highlight Healers</button>
+            <button class="checktoggle" id="hitanks">Highlight Tanks</button>
+            <button class="checktoggle" id="hidps">Hightlight DPS-s</button>
         </p>
         <p id="head"></p>
         <p id="main"></p>
