--- a/dsroster.html
+++ b/dsroster.html
@@ -16,7 +16,7 @@
             <button class="checktoggle" id="trest">Toggle Non-Static</button>
             <button class="checktoggle" id="hihealers">Highlight Healers</button>
             <button class="checktoggle" id="hitanks">Highlight Tanks</button>
-            <button class="checktoggle" id="hidps">Hightlight DPS-s</button>
+            <button class="checktoggle" id="hidps">Hightlight DPS</button>
         </p>
         <p id="head"></p>
         <p id="main"></p>
