--- a/dsroster.html
+++ b/dsroster.html
@@ -17,6 +17,7 @@
             <button class="checktoggle" id="hihealers">Highlight Healers</button>
             <button class="checktoggle" id="hitanks">Highlight Tanks</button>
             <button class="checktoggle" id="hidps">Hightlight DPS</button>
+            <button class="checktoggle" id="hiremove">Reset Highlight</button>
         </p>
         <p id="head"></p>
         <p id="main"></p>
