--- a/dsroster.html
+++ b/dsroster.html
@@ -18,6 +18,7 @@
             <button class="checktoggle" id="hitanks">Highlight Tanks</button>
             <button class="checktoggle" id="hidps">Hightlight DPS</button>
             <button class="checktoggle" id="hiremove">Reset Highlight</button>
+            <input type="text" id="search">
         </p>
         <p id="head"></p>
         <p id="main"></p>
