--- a/ssscalc.html
+++ b/ssscalc.html
@@ -11,15 +11,16 @@
 
 
 
- <table style="width:100%">
+ <table>
   <tr>
     <td>Select Fight</td>
     <td> <select id="selfight">
+	<option value="NULL">Pick Fight</option>
 </select> </td>
   </tr>
   <tr>
     <td>Select Class</td>
-    <td> <select id="selclass">
+    <td> <select disabled id="selclass">
 </select> </td>
   </tr>
 </table> 
