--- a/ssscalc.html
+++ b/ssscalc.html
@@ -7,8 +7,6 @@
         <link rel="stylesheet" href="css/ssscalc.css">
     </head>
     <body>
-<p id="content">
-
 
 
  <table>
@@ -52,9 +50,9 @@ Remaining HP
 </td>
 </tr>
 </table> 
+<br />
+Early version of an up-to-date Stone Sky Sea DPS calculator. Other fights will be added.
 
-
-</p>
 
     </body>
 </html>
