--- a/ssscalc.html
+++ b/ssscalc.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/ssscalc.css">
     </head>
     <body>
-
-
+<div id="content">
+<p id="title">Stone Sky Sea Calculator</p>
  <table>
 <tr id="res">
 <td id="restext">
@@ -53,6 +53,7 @@ Remaining HP
 <br />
 Early version of an up-to-date Stone Sky Sea DPS calculator. Other fights will be added.
 
+</div>
 
     </body>
 </html>
