--- a/ssscalc.html
+++ b/ssscalc.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 <div id="content">
-<p id="title">Stone   Sky   Sea   Calculator</p>
+<p id="title">Stone   Sky   Sea   Calculator<hr></p>
  <table>
 <tr id="res">
 <td id="restext">
