--- a/fftype.html
+++ b/fftype.html
@@ -12,7 +12,7 @@
  <textarea id="input" rows="4" cols="50">
 </textarea> 
 <hr>
- <textarea id="output" rows="4" cols="50" disabled>
+ <textarea id="output" rows="4" cols="50">
 Translated text here.
 </textarea> 
 </div>
