--- a/fftype.html
+++ b/fftype.html
@@ -9,11 +9,10 @@
     <body>
 <div id="content">
 <p id="title">FFXIV Typing</p><hr>
- <textarea id="input" rows="4" cols="50">
+ <textarea id="input" rows="4" cols="50" placeholder="Type here! :)" >
 </textarea> 
 <hr>
- <textarea id="output" rows="4" cols="50">
-Translated text here.
+ <textarea id="output" rows="4" cols="50" placeholder="Translated text here."> readonly >
 </textarea> 
 </div>
 
