--- a/fftype.html
+++ b/fftype.html
@@ -12,7 +12,7 @@
  <textarea id="input" rows="4" cols="50" placeholder="Type here! :)" >
 </textarea> 
 <hr>
- <textarea id="output" rows="4" cols="50" placeholder="Translated text here."> readonly >
+ <textarea id="output" rows="4" cols="50" placeholder="Translated text here." readonly >
 </textarea> 
 </div>
 
