--- a/dsroster.html
+++ b/dsroster.html
@@ -3,11 +3,14 @@
     <head>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/dsroster.js"></script>
+        <script type="text/javascript" src="js/ffmenu.js"></script>
         
+        <link rel="stylesheet" href="css/ffmenu.css">
         <link rel="stylesheet" href="css/dsroster.css">
     </head>
     <body>
-
+<div id="ffmenu">
+</div>
         <p id="loading">Loading... (Requires JavaScript Enabled)</p>
         <p id="menu">
             <button class="checktoggle" id="tjobs">Toggle Max Jobs</button>
