--- a/fftype.html
+++ b/fftype.html
@@ -3,12 +3,17 @@
     <head>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/fftype.js"></script>
+        <script type="text/javascript" src="js/ffmenu.js"></script>
         
         <link rel="stylesheet" href="css/fftype.css">
+        <link rel="stylesheet" href="css/ffmenu.css">
     </head>
     <body>
 <div id="content">
-<p id="title">FFXIV Typing</p><hr>
+<p id="title">FFXIV Typing</p>
+<div id="ffmenu">
+</div>
+<hr>
  <textarea id="input" rows="4" cols="50" placeholder="Type here! :)" >
 </textarea> 
 <hr>
