--- a/ssscalc.html
+++ b/ssscalc.html
@@ -3,12 +3,17 @@
     <head>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ssscalc.js"></script>
+                <script type="text/javascript" src="js/ffmenu.js"></script>
         
+        <link rel="stylesheet" href="css/ffmenu.css">
         <link rel="stylesheet" href="css/ssscalc.css">
     </head>
     <body>
 <div id="content">
-<p id="title">Stone   Sky   Sea   Calculator<hr></p>
+<p id="title">Stone   Sky   Sea   Calculator</p>
+<div id="ffmenu">
+</div>
+<hr>
  <table>
 <tr id="res">
 <td id="restext">
