add link to timers

--- a/ffmenu.html
+++ b/ffmenu.html
@@ -1,3 +1,4 @@
 <a href="./ssscalc.html" class="ffbtn">SSSCALC</a>
 <a href="./fftype.html" class="ffbtn">FFTYPE</a>
 <a href="./dsroster.html" class="ffbtn">DSROSTER</a>
+<a href="https://www.xenoveritas.org/static/ffxiv/timer.html" class="ffbtn">TIMERS</a>
