Clean up CSS files

--- a/ssscalc.html
+++ b/ssscalc.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ssscalc.js"></script>
                 <script type="text/javascript" src="js/ffmenu.js"></script>
-        
+        <link rel="stylesheet" href="css/ffcommon.css">
         <link rel="stylesheet" href="css/ffmenu.css">
         <link rel="stylesheet" href="css/ssscalc.css">
     </head>
