--- a/ffmenu.html
+++ b/ffmenu.html
@@ -1,4 +1,5 @@
 <a href="./ssscalc.html" class="ffbtn">SSSCALC</a>
 <a href="./fftype.html" class="ffbtn">FFTYPE</a>
 <a href="./dsroster.html" class="ffbtn">DSROSTER</a>
-<a href="https://www.xenoveritas.org/static/ffxiv/timer.html" class="ffbtn">TIMERS</a>
+<a href="./fftimers.html" class="ffbtn">TIMERS</a>
+<a href="./ffcactpot.html" class="ffbtn">CACTPOT</a>
