--- a/fftimers.html
+++ b/fftimers.html
@@ -9,11 +9,11 @@
     </head>
     <body>
 <div id="content">
-<p id="title">FFXIV Cactpot Solver</p>
+<p id="title">FFXIV Timers</p>
 <div id="ffmenu">
 </div>
 <hr>
- <iframe class="ffextiframe" id="cactpotiframe" allowtransparency="true" src="https://super-aardvark.github.io/yuryu/"></iframe> 
+ <iframe class="ffextiframe" id="timersiframe" allowtransparency="true" src="https://www.xenoveritas.org/static/ffxiv/timer.html"></iframe> 
 
 </div>
 
