ffcactpot.html: Add title

--- a/ffcactpot.html
+++ b/ffcactpot.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>FFXIV Cactpot Helper</title>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
         <link rel="stylesheet" href="css/ffcommon.css">
