--- a/dsroster.html
+++ b/dsroster.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Domus Solis FC Roster</title>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/dsroster.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
