fftype.html: Add title

--- a/fftype.html
+++ b/fftype.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>FFXIV Bubble Typing Generator</title>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/fftype.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
