--- a/ssscalc.html
+++ b/ssscalc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<title>FFXIV Stone Sea Sky DPS Calculator</title>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ssscalc.js"></script>
                 <script type="text/javascript" src="js/ffmenu.js"></script>
