First working version with all icons

--- a/dsroster.html
+++ b/dsroster.html
@@ -14,7 +14,7 @@
 </div>
         <p id="loading">Loading... (Requires JavaScript Enabled)</p>
         <p id="menu">
-            <button class="checktoggle" id="tjobs">Toggle Max Jobs</button>
+            <button class="checktoggle" id="tjobs">Toggle Jobs</button>
             <button class="checktoggle" id="tnames">Toggle Names</button>
             <button class="checktoggle" id="tstatic">Toggle Static</button>
             <button class="checktoggle" id="trest">Toggle Non-Static</button>
