dsroster.js: Attempt to fix timeout issue

--- a/dsroster.html
+++ b/dsroster.html
@@ -12,7 +12,7 @@
     <body>
 <div id="ffmenu">
 </div>
-        <p id="loading">Loading... (Requires JavaScript Enabled)</p>
+        <img class="loadingclass" id="loadinggif" src="img/loadingmoogle.gif" /><p class="loadingclass" id="loading">Loading... (Requires JavaScript Enabled)</p>
         <p id="menu">
             <button class="checktoggle" id="tjobs">Toggle Jobs</button>
             <button class="checktoggle" id="tnames">Toggle Names</button>
