Add our own timers

--- a/fftimers.html
+++ b/fftimers.html
@@ -4,6 +4,7 @@
         <title>FFXIV Timers</title>
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
+        <script type="text/javascript" src="js/fftimers.js"></script>
         <link rel="stylesheet" href="css/ffcommon.css">
         <link rel="stylesheet" href="css/ffiframe.css">
         <link rel="stylesheet" href="css/ffmenu.css">
@@ -14,6 +15,10 @@
 <div id="ffmenu">
 </div>
 <hr>
+<div id="timerslocal">
+Static: <span id="statictimer">Loading.</span><br>
+Wedding: <span id="weddingtimer">Loading.</span><br>
+</div>
  <iframe class="ffextiframe" id="timersiframe" allowtransparency="true" src="https://www.xenoveritas.org/static/ffxiv/timer.html" ></iframe> 
 
 </div>
