--- a/fftimers.html
+++ b/fftimers.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="js/fftimers.js"></script>
         <link rel="stylesheet" href="css/ffcommon.css">
         <link rel="stylesheet" href="css/ffiframe.css">
+        <link rel="stylesheet" href="css/fftimers.css">
         <link rel="stylesheet" href="css/ffmenu.css">
     </head>
     <body>
