--- a/fftimers.html
+++ b/fftimers.html
@@ -17,9 +17,9 @@
 </div>
 <hr>
 <div id="timerslocal">
-Static: <br>
+Static<br>
 <span id="statictimer">Loading.</span><br>
-Wedding: <br>
+Wedding<br>
 <span id="weddingtimer">Loading.</span><br>
 </div>
  <iframe class="ffextiframe" id="timersiframe" allowtransparency="true" src="https://www.xenoveritas.org/static/ffxiv/timer.html" ></iframe> 
