Make sites more responsive

--- a/fftimers.html
+++ b/fftimers.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/ffiframe.css">
         <link rel="stylesheet" href="css/fftimers.css">
         <link rel="stylesheet" href="css/ffmenu.css">
+<meta name='viewport' content="width=device-width, initial-scale=1" />
     </head>
     <body>
 <div id="content">
