--- a/ffcactpot.html
+++ b/ffcactpot.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>FFXIV Cactpot Helper</title>
+<meta name='viewport' content="width=device-width, initial-scale=1" />
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
         <link rel="stylesheet" href="css/ffcommon.css">
