--- a/fftimers.html
+++ b/fftimers.html
@@ -20,7 +20,7 @@
 <div id="timerslocal">
 Static<br>
 <span id="statictimer">Loading.</span><br>
-Wedding<br>
+💞Wedding💞<br>
 <span id="weddingtimer">Loading.</span><br>
 </div>
  <iframe class="ffextiframe" id="timersiframe" allowtransparency="true" src="https://www.xenoveritas.org/static/ffxiv/timer.html" ></iframe> 
