ffmenu.html: Add link to brackets

--- a/ffmenu.html
+++ b/ffmenu.html
@@ -3,3 +3,4 @@
 <a href="./dsroster.html" class="ffbtn">DSROSTER</a>
 <a href="./fftimers.html" class="ffbtn">TIMERS</a>
 <a href="./ffcactpot.html" class="ffbtn">CACTPOT</a>
+<a href="./ffbrackets.html" class="ffbtn">BRACKETS</a>
