ffmenu: replace dsroster

--- a/ffmenu.html
+++ b/ffmenu.html
@@ -1,5 +1,5 @@
 <a href="./ssscalc.html" class="ffbtn">SSSCALC</a>
 <a href="./fftype.html" class="ffbtn">FFTYPE</a>
-<a href="./dsroster.html" class="ffbtn">DSROSTER</a>
+<a href="./gbaroster.html" class="ffbtn">GBAROSTER</a>
 <a href="./fftimers.html" class="ffbtn">TIMERS</a>
 <a href="./ffcactpot.html" class="ffbtn">CACTPOT</a>
