--- a/spooktype.html
+++ b/spooktype.html
@@ -4,7 +4,7 @@
         <title>Spook Typing Generator</title>
 <meta name='viewport' content="width=device-width, initial-scale=1" />
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-        <script type="text/javascript" src="js/fftype.js"></script>
+        <script type="text/javascript" src="js/spooktype.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
         <link rel="stylesheet" href="css/ffcommon.css">
         <link rel="stylesheet" href="css/fftype.css">
