--- a/ffmenu.html
+++ b/ffmenu.html
@@ -2,4 +2,5 @@
 <a href="./fftype.html" class="ffbtn">FFTYPE</a>
 <a href="./gbaroster.html" class="ffbtn">GBAROSTER</a>
 <a href="./fftimers.html" class="ffbtn">TIMERS</a>
+<a href="./fffish.html" class="ffbtn">FISHING</a>
 <a href="./ffcactpot.html" class="ffbtn">CACTPOT</a>
