--- a/fffish.html
+++ b/fffish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cat Become Hungry</title>
+        <title>Cat Became Hungry</title>
 <meta name='viewport' content="width=device-width, initial-scale=1" />
         <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/ffmenu.js"></script>
@@ -12,7 +12,7 @@
     </head>
     <body>
 <div id="content">
-<p id="title">Cat Become Hungry</p>
+<p id="title">Cat Became Hungry</p>
 <div id="ffmenu">
 </div>
 <hr>
